<resources>
    <string name="app_name">Finance Journal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus_char">+</string>
    <string name="select_cat">Select Category</string>
    <string name="select_color">Select Color</string>
    <string name="select_icon">Select Icon</string>
    <string name="add_cat">Add Category</string>
    <string name="edit_cat">Edit Category</string>
    <string name="balance_text">Balance: </string>
    <string name="this_month">This month</string>
    <string name="last_transactions">Last transactions</string>
    <string name="see_all">See all</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="addTransaction">Add transaction</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="amount_zero">0.00</string>
    <string name="cat_none">None</string>
    <string name="note_background">Write a note</string>
    <string name="analysis">Analysis</string>
    <string name="inTotal">In total:\n0.00</string>
    <string name="transaction">Transactions</string>
    <string-array name="Period">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="goals">Goals</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="addGoal">Add goal</string>
    <string name="name_background">Write a name</string>
    <string name="deadline">Deadline</string>
    <string name="addSaving">Add saving</string>
    <string name="deleteGoal">Delete goal</string>
    <string name="editGoal">Edit goal</string>
    <string name="reached">Reached!</string>
</resources>