<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:windowSoftInputMode="adjustResize"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="match_parent"
    tools:context=".fragments.EditTransactionFragment"
    android:id="@+id/editTransactionFragment"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/titleAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"
            android:background="@color/white"
            android:drawablePadding="12sp"
            android:text="@string/addTransaction"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/arrowBackBtn_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/titleAddTransaction"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/titleAddTransaction"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            android:clickable="true"
            />

        <LinearLayout
            android:id="@+id/TransactionTypeLayout"
            android:layout_width="304dp"
            android:layout_height="37dp"
            android:layout_below="@+id/titleAddTransaction"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/ellipse_choose_income_outcome"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectExpTransactions_e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/expense"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/selectIncTransactions_e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/main_grey_color"
                android:gravity="center_horizontal"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dateID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TransactionTypeLayout"
            android:layout_alignStart="@id/TransactionTypeLayout"
            android:layout_marginStart="0dp"
            android:layout_marginTop="37dp"
            android:text="@string/date"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/DateSelectionLayout_e"
            android:layout_width="304dp"
            android:layout_height="37dp"
            android:layout_below="@+id/dateID"
            android:layout_alignStart="@id/dateID"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addTransDateIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/add_trans_date_icon"
                />

            <Button
                android:id="@+id/SelectDateBtn_e"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:gravity="left"
                android:clickable="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:focusable="true" />

            <ImageView
                android:id="@+id/SelectDateImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>



        <TextView
            android:id="@+id/amountID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DateSelectionLayout_e"
            android:layout_alignStart="@id/TransactionTypeLayout"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/amount"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/AmountSelectionLayout"
            android:layout_width="304dp"
            android:layout_height="37dp"
            android:layout_below="@+id/amountID"
            android:layout_alignStart="@id/amountID"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addAmountIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/add_trans_amount_icon" />

            <EditText
                android:id="@+id/SelectAmountBtn_e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="3dp"
                android:backgroundTint="@color/white"
                android:hint="@string/amount_zero"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:clickable="true"
                tools:ignore="RtlHardcoded"
                android:focusable="true" />

            <ImageView
                android:id="@+id/SelectAmountImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/categoryID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AmountSelectionLayout"
            android:layout_alignStart="@id/AmountSelectionLayout"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/category"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/CategorySelectionLayout"
            android:layout_width="304dp"
            android:layout_height="37dp"
            android:layout_below="@+id/categoryID"
            android:layout_alignStart="@id/categoryID"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addCategoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/add_trans_cat_icon" />

            <Button
                android:id="@+id/SelectCategoryBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:text="@string/cat_none"
                android:clickable="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="left"
                tools:ignore="RtlHardcoded"
                android:focusable="true" />

            <ImageView
                android:id="@+id/SelectCategoryImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/noteID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CategorySelectionLayout"
            android:layout_alignStart="@id/CategorySelectionLayout"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:text="@string/note"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/NoteLayout"
            android:layout_width="304dp"
            android:layout_height="37dp"
            android:layout_below="@+id/noteID"
            android:layout_alignStart="@id/noteID"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addNoteIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/add_trans_note_icon" />

            <EditText
                android:id="@+id/SelectNoteBtn"
                android:layout_width="0dp"
                android:windowSoftInputMode="adjustResize"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:hint="@string/note_background"
                android:inputType="text"
                android:textColor="@color/black"
                android:maxLength="30"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/SelectNoteImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="61dp"
            android:layout_height="62dp"
            android:layout_below="@id/NoteLayout"
            android:layout_alignStart="@id/NoteLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:background="@drawable/circle_save_transaction_btn"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveTransactionBtn_e"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="61dp"
            android:layout_height="62dp"
            android:layout_below="@id/NoteLayout"
            android:layout_alignEnd="@id/NoteLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:background="@drawable/baseline_delete_outline_24"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteTransactionBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF" />
        </LinearLayout>


    </RelativeLayout>


</FrameLayout>